# hallow

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: hallow.yml
src/hallow/: __init__.py  api.py  types.py
src/hallow/cli/: __init__.py  main.py
src/hallow/config/: __init__.py  loader.py
src/hallow/core/: __init__.py  analyzer.py  baseline.py  boundaries.py  detectors.py  discovery.py  duplicates.py  fixer.py  health.py
src/hallow/extract/: __init__.py  extractor.py
src/hallow/graph/: __init__.py  module_graph.py  resolver.py
src/hallow/mcp/: __init__.py  server.py
src/hallow/output/: __init__.py  codeclimate.py  formatters.py  github.py  markdown.py  sarif.py
src/hallow/plugins/: __init__.py  base.py  celery.py  django.py  fastapi.py  flask.py  pytest.py  registry.py
src/hallow/security/: __init__.py  secrets.py  taint.py
tests/: test_baseline.py  test_boundaries.py  test_config.py  test_detectors.py  test_duplicates.py  test_extract.py  test_fixer.py  test_graph.py  test_health.py  test_mcp.py  test_output_formats.py  test_plugins.py  test_security.py
