[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallow"
version = "0.1.0"
description = "Deterministic codebase intelligence for Python — dead code, duplication, complexity, architecture boundaries, and quality scoring."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Sean Roberts", email = "sroberts@fulcrumdefense.ai" },
]
keywords = ["static-analysis", "dead-code", "complexity", "duplication", "python", "lint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
hallow = "hallow.cli.main:app"

[project.urls]
Homepage = "https://github.com/sarob/hallow"
Repository = "https://github.com/sarob/hallow"
Issues = "https://github.com/sarob/hallow/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "SIM115"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
strict = true
